# vSLAM_Analysis

./: .gitignore  CMakeLists.txt  README.md
cmake/: vSLAM_FrontEndConfig.cmake
include/vSLAM_Analysis/Dataset/: AnalyseDetector.hpp  AnalyseDetectorDataset.hpp  AnalyseFeatures.hpp
include/vSLAM_Analysis/Stereo/: Utilities.hpp
python/: GraphUtilities.py  makeFigure.py  plotDebayerTimes.py
src/: CMakeLists.txt  Untitled 1.ods  extractLoop.sh
src/DataSet/: AnalyseDetector.cpp  AnalyseDetectorDataset.cpp  AnalyseFeatures.cpp  CMakeLists.txt
src/Stereo/: CMakeLists.txt  Utilities.cpp
src/bumblebee/: CMakeLists.txt  package.xml
src/bumblebee/input/: 4Distortion.xml  5Distortion.xml  8Distortion.xml  LeftIn4.xml
src/bumblebee/launch/: displayFeatures.launch
src/bumblebee/scripts/: D1_time.csv  keyBoard.py  plotDebayerTimes.py
src/bumblebee/src/: basic_shapes.cpp  display.cpp  displayViso.cpp
src/cmake/: BasicSLAMStructuresConfig.cmake  libvisoConfig.cmake  vSLAM_FrontEndConfig.cmake
src/dataset/: .gitignore  CMakeLists.txt  README.md  package.xml  readme.rst  setup.py
src/dataset/launch/: CreateDatasetBag.xml  CreateStereoBag.xml  CreateStereoLoop.xml  Text File  bagTest.xml  baseFeatures.xml  baseLaunch.xml  displayFolder.xml  extractSingleLoopFeatures.xml  recordImages.xml  simpleLaunch.xml  test.xml  visoLoopLaunch.xml  ~vizLaunch.xml
src/dataset/meta/: A.txt  B.txt
src/dataset/msg/: AKAZE.msg  BRISK.msg  FAST.msg  ORB.msg  SIFT.msg  SURF.msg  extractSettings.msg
src/dataset/scripts/: DisplayDataSetFeatures.py  ExtractFeatures.py  FeaturesAnalysis.py  FeaturesResults.py  Simulations.py  SummaryOfFiles.txt  bumbleDataSet.py  count.py  createVideo.py  datasetNode.py  displayFolder.py  displayImages.py  drawingFunctions.py  extractLoopFeatures.py  getFeatures.py  graphFeatures.py  nFeaturesFast.py  nFeaturesOrb.py  nStereoOrb.py  playbackDataset.py  playbackLoop.py  stereoSimulation.py  test.py  unpackBumblebeeData.py
src/dataset/src/: extractManager.cpp  extractNode.cpp  simpleCamera.cpp
src/dataset/srv/: extractAKAZE.srv  extractBRISK.srv  extractFAST.srv  extractFeatures.srv  extractORB.srv  extractSIFT.srv  extractSURF.srv  getDatasetInfo.srv  nextFrame.srv  publishImage.srv  rectifiedSettings.srv  stereoInliers.srv  (+2 more)
src/slam_analysis/: .gitignore  CMakeLists.txt
src/viso2/: CMakeLists.txt  package.xml
src/viso_extractor/: CMakeLists.txt  ReadMe.txt  package.xml
src/vslam_display/: .CMakeLists.txt.kate-swp  CMakeLists.txt  package.xml  vslam_display.kdev4
viso2/: CMakeLists.txt  package.xml  viso2.kdev4
viso2/.kdev4/: viso2.kdev4
viso2/src/: visoGenerator.cpp  visoNode.cpp
viso2/srv/: NextFrame.srv
(+68 files in other folders)
